--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,9 +33,8 @@ jobs:
         ref: ${{ github.event.pull_request.head.ref }}
 
     - name: Render terraform docs inside the USAGE.md and push changes back to PR branch
-      uses: terraform-docs/gh-actions@v0.11.0
+      uses: tjrmentor/gh-actions@v1.0.0
       with:
         working-dir: .
-        output-file: README.md
         output-method: inject
         git-push: "true"
