--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@ec3a7ce113134d7a93b817d10a8272cb61118579
+      uses: actions/checkout
 
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@3d8debd658c92063839bc97da5c2427100420dec
