--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,9 +32,6 @@ jobs:
       with:
         ref: ${{ github.event.pull_request.head.ref }}
     
-    - name: Enable GPG signing
-      run: git config commit.gpgsign true
-
     - name: Render terraform docs inside the USAGE.md and push changes back to PR branch
       uses: terraform-docs/gh-actions@v1.0.0
       with:
@@ -42,3 +39,4 @@ jobs:
         output-file: README.md
         output-method: inject
         git-push: "true"
+        git-push-sign-off: "true"
